# train-stats

./: .gitmodules  Makefile  README.ipynb  README.md  README.rst  TODO.md  Trainsperiment.ipynb  app.py  backports.py  bugs.py  gerrit.py  git.py  pyproject.toml  report.csv  requirements.txt  stats-per-train.py  toolforge-deploy.sh  trainblockers.py  trainstats.py  update-group1-group2.py  update-patch-owner-in-db.py  update-project-in-db.py  update.sh  utils.py
data/: 1.31.0-wmf.1.csv  1.31.0-wmf.11.csv  1.31.0-wmf.12.csv  1.31.0-wmf.15.csv  1.31.0-wmf.16.csv  1.31.0-wmf.2.csv  1.31.0-wmf.20.csv  1.31.0-wmf.21.csv  1.31.0-wmf.22.csv  1.31.0-wmf.23.csv  1.31.0-wmf.24.csv  1.31.0-wmf.25.csv  1.31.0-wmf.26.csv  1.31.0-wmf.27.csv  1.31.0-wmf.28.csv  1.31.0-wmf.29.csv  1.31.0-wmf.3.csv  1.31.0-wmf.30.csv  1.31.0-wmf.4.csv  1.32.0-wmf.1.csv  1.32.0-wmf.10.csv  1.32.0-wmf.12.csv  1.32.0-wmf.13.csv  1.32.0-wmf.14.csv  1.32.0-wmf.15.csv  1.32.0-wmf.16.csv  1.32.0-wmf.18.csv  1.32.0-wmf.19.csv  1.32.0-wmf.2.csv  1.32.0-wmf.20.csv  1.32.0-wmf.22.csv  1.32.0-wmf.23.csv  1.32.0-wmf.24.csv  1.32.0-wmf.26.csv  1.32.0-wmf.3.csv  1.32.0-wmf.4.csv  1.32.0-wmf.5.csv  1.32.0-wmf.6.csv  1.32.0-wmf.7.csv  1.32.0-wmf.8.csv  (+111 more)
scripts/: get_version.py  trainblockers-scrape.py
templates/: 404.html  email.html
